Fix regression when opening a new image in an existing krita instance

Thanks to Nicholas LaPointe who found the regression.

BUG:416202